--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
 
-:root{
+:root {
     --Moderatecyan: hsl(176, 50%, 47%);
     --Darkcyan: hsl(176, 72%, 28%);
     --Black: hsl(0, 0%, 0%);
@@ -10,40 +10,43 @@
     --whitealp: hsla(0, 0%, 91%, 0.767);
     --darkGrayLight: hsla(0, 0%, 72%, 0.26);
     --verydarkbg: hsla(207, 18%, 12%, 0.37);
-
+    --red: hsl(4, 78%, 55%);
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     box-sizing: border-box;
-    font-family: 'Commissioner', sans-serif;
+    font-family: "Commissioner", sans-serif;
     line-height: 1.7;
-    font-size: .952em;
+    font-size: 0.952em;
     color: var(--Darkgray);
 }
 
-h1,h2,h3,h4{
+h1,
+h2,
+h3,
+h4 {
     color: var(--Black);
     line-height: 1.25;
 }
 
 /*Estilos header*/
 
-.header{
+.header {
     position: relative;
 }
 
-.header__img{
+.header__img {
     width: 100%;
     object-fit: cover;
 }
 
 /*Estilos header__content*/
-.header__content{
+.header__content {
     position: absolute;
     top: 0;
     right: 0;
@@ -55,53 +58,58 @@ h1,h2,h3,h4{
     align-items: center;
     padding: 1.76rem 0;
     max-width: 1100px;
-
 }
 
+.picture__img {
+    filter: blur(1.5px) brightness(70%) saturate(100%); 
+} 
+
 /* Estilos menú mobile */
-.nav{
+.nav {
     box-sizing: border-box;
     background-color: var(--white);
     position: absolute;
     top: 100%;
     width: 100%;
-    border-radius: .8rem;
+    border-radius: 0.8rem;
     clip-path: circle(0.4% at 100% 0);
-    transition: clip-path .4s;
+    transition: clip-path 0.4s;
     z-index: 999;
 }
 
 /* Estilo para mostrar nav-mobile */
 
-.nav-show{
+.nav-show {
     clip-path: circle(140.2% at 0 99%);
 }
 
-.nav__list{
+.nav__list {
     list-style: none;
 }
 
-.nav__item{
+.nav__item {
     border-bottom: 1px solid var(--verydark);
     padding: 1.5rem 1rem;
 }
 
-.nav__link{
+.nav__link {
     color: var(--Black);
     text-decoration: none;
     font-weight: 500;
 }
 
-.filters{
-    filter: blur(2px);
-    transition: filter .4s;
+.filters {
+    transition: filter .6s ease-in-out;
+    filter: blur(1px) brightness(70%) saturate(120%); 
 }
+
 /* MAIN */
-.main{
+.main {
     background-color: var(--white);
     margin-top: -1rem;
 }
-.main__content{
+
+.main__content {
     position: relative;
     width: 90%;
     margin: auto;
@@ -112,29 +120,25 @@ h1,h2,h3,h4{
     top: -60px;
 }
 
-
 /* Estilo todas las card con la clase card */
 
-.card{
+.card {
     background-color: var(--white);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     border: 1px solid var(--darkGrayLight);
     box-shadow: 1px 1px 5px 1px var(--darkGrayLight);
-
 }
 
 /* Estilo la primera seccion card__master */
 
-.card__master{
-    
+.card__master {
     text-align: center;
     display: grid;
     gap: 1.5rem;
     padding: 3rem 1rem 2.5rem 1rem;
-
 }
 
-.master__img{
+.master__img {
     position: absolute;
     top: -1.5%;
     left: 0;
@@ -142,28 +146,28 @@ h1,h2,h3,h4{
     margin: auto;
 }
 
-.master__title{
+.master__title {
     text-align: center;
     font-size: 1.3em;
     width: 200px;
     margin: auto;
 }
 
-.master__paragraph{
+.master__paragraph {
     color: var(--Darkgray);
-
 }
+
 /* Estilo master__info div dentro de section */
 
-.master__info{
+.master__info {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: .7rem;
+    gap: 0.7rem;
 }
 
-.btn{
-    padding: .9rem 0;
+.btn {
+    padding: 0.9rem 0;
     text-align: center;
     text-decoration: none;
     border-radius: 2rem;
@@ -172,60 +176,61 @@ h1,h2,h3,h4{
     font-weight: 500;
     font-size: 1.05em;
     cursor: pointer;
-    transition: .5s ease;
+    transition: 0.5s ease;
     border: 1px solid transparent;
-
 }
 
-.btn-back{
+.btn-back {
     width: 75%;
 }
 
-.master__favorite{
+.master__favorite {
     display: flex;
     align-items: center;
 }
-.master__favorite svg{
+
+.master__favorite svg {
     border: 2px solid transparent;
 }
-.master__favorite svg:hover{
-    transition: border .5s;
+
+.master__favorite svg:hover {
+    transition: border 0.5s;
     border: 2px solid var(--Darkcyan);
     border-radius: 50%;
 }
-.text-favorite{
+
+.text-favorite {
     display: none;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: transparent;
     border: 1px solid var(--Moderatecyan);
     color: var(--Darkcyan);
 }
 
-
-
 /* Estilo la segunda seccion stadistics */
 
-.card__stadistics{
+.card__stadistics {
     text-align: center;
     padding: 2rem 0;
 }
-.stadistics__number{
+
+.stadistics__number {
     font-size: 2em;
 }
 
-.stadistics__description{
-    padding-top: .5rem;
-    font-size: .9em;
+.stadistics__description {
+    padding-top: 0.5rem;
+    font-size: 0.9em;
 }
 
-.lineal{
+.lineal {
     margin: 1rem auto;
     width: 25%;
 }
 
-.progress__bar{
+.progress__bar {
     width: 90%;
     margin: 2rem auto 1rem auto;
     height: 15px;
@@ -233,7 +238,7 @@ h1,h2,h3,h4{
     background-color: var(--whitealp);
 }
 
-.progress{
+.progress {
     width: 75%;
     height: 100%;
     border-radius: 2rem;
@@ -242,64 +247,61 @@ h1,h2,h3,h4{
 
 /* Estilo la tercera seccion about */
 
-.about__content{
+.about__content {
     padding: 2.5rem 1rem;
     display: grid;
     gap: 1.5rem;
 }
 
-.card__article{
+.card__article {
     padding: 1.5rem;
     display: grid;
     gap: 1.5rem;
 }
 
-.article__info{
+.article__info {
     line-height: 2.8;
 }
 
-.info__description{
+.info__description {
     color: var(--Moderatecyan);
     font-weight: 500;
 }
 
-.article__price{
+.article__price {
     display: flex;
     flex-direction: column;
     gap: 1.5em;
 }
 
-.price__info{
+.price__info {
     display: flex;
     align-items: center;
-    gap: .5rem;
-
+    gap: 0.5rem;
 }
 
-.price{
+.price {
     font-size: 2em;
     color: var(--Black);
 }
 
-.modal-btn{
+.modal-btn {
     width: 100%;
     padding: 1rem 0;
     font-weight: 700;
 }
 
-.card__off{
-    opacity: .5;
+.card__off {
+    opacity: 0.5;
     pointer-events: none;
 }
 
-.modal-off{
+.modal-off {
     background-color: var(--Darkgray);
 }
 
-
-
 /* Estilo la modal */
-.modal{
+.modal {
     background-color: var(--verydarkbg);
     position: fixed;
     top: 0;
@@ -309,77 +311,153 @@ h1,h2,h3,h4{
     display: flex;
     pointer-events: none;
     opacity: 0;
-    transition: opacity .4s .5s;
+    transition: opacity 0.4s 0.5s;
     --transform: translateY(-100vh);
-    --transition: transform .5s;
+    --transition: transform 0.5s;
     z-index: 999;
 }
 
-
-
-.modal__container{
+.modal__container {
     box-sizing: border-box;
     background-color: var(--white);
     position: relative;
     width: 90%;
     margin: auto;
-    max-width: 670px;
     max-height: 90%;
     overflow-y: auto;
-    padding: 2rem 1.3rem;
-    border-radius: .5rem;
+    padding: 2rem 1rem;
+    border-radius: 0.5rem;
     transform: var(--transform);
     transition: var(--transition);
 }
 
-.modal-show{
+.modal-show {
     opacity: 1;
-    transition: opacity .5s .3s;
+    transition: opacity 0.5s 0.3s;
     pointer-events: unset;
     --transform: translateY(0vh);
-    --transition: transform .5s;
+    --transition: transform 0.5s;
 }
 
-.modal__grid{
+.modal__grid {
     display: grid;
     gap: 1.5rem;
 }
 
-.modal__info{
+.modal__info {
     border: 1px solid var(--verydark);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     padding: 1.7rem;
     display: grid;
     gap: 2.5rem;
+    transition: .3s ease;
 }
 
-.info__text{
+.modal__info--active{
+    border: 1px solid var(--Moderatecyan);
+}
+
+.info__content {
+    line-height: 2;
+}
+
+.info__title {
+    font-size: 1.1em;
+    transition: color .5s;
+    cursor: pointer;
+}
+
+.info__title:hover{
+    color: var(--Moderatecyan);
+}
+
+.info__text {
     display: flex;
     align-items: center;
-    gap: .8rem;
+    gap: 1.5rem;
 }
 
-.box-close{
+.radio {
+    display: none;
+}
+
+.radio+label {
+    display: inline-block;
+    width: 14px;
+    height: 15px;
+    position: relative;
+    cursor: pointer;
+    transition: .5s ease;
+
+}
+
+.radio+label::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 12px;
+    padding: 0.5rem;
+    height: 12px;
+    border: 1px solid var(--verydark);
+    border-radius: 50%;
+    transition: .5s ease;
+
+}
+
+.radio:checked+label::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 15px;
+    height: 15px;
+    background-color: var(--Moderatecyan);
+    border-radius: 50%;
+    transition: .5s ease;
+}
+
+.box-close {
     position: absolute;
     top: 30px;
-    right: 20px;
+    right: 11px;
     cursor: pointer;
-
 }
 
+.price__modal {
+    font-size: 1.1em;
+}
+
+.grid {
+    display: grid;
+    gap: 1.5rem;
+}
+.icon-close{
+    border: 1px solid transparent;
+    border-radius: 50%;
+    padding: .4rem;
+    transition: .5s;
+}
+
+.icon-close-active{
+    border: 1px solid var(--red);
+}
 
 /* Agrego mediaQuerys */
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
+
     /* Header */
     /* Estilos menú mobile */
-    .nav{
+    .nav {
         box-sizing: border-box;
         background-color: transparent;
         position: static;
-        top:0;
+        top: 0;
         width: unset;
-        border-radius: .8rem;
+        border-radius: 0.8rem;
         clip-path: none;
         transition: none;
         z-index: 999;
@@ -387,124 +465,122 @@ h1,h2,h3,h4{
 
     /* Estilo para mostrar nav-mobile */
 
-    .nav__list{
+    .nav__list {
         list-style: none;
         display: flex;
     }
 
-    .nav__item{
+    .nav__item {
         border-bottom: none;
-        padding: 0 .9rem;
+        padding: 0 0.9rem;
     }
 
-    .nav__link{
+    .nav__link {
         color: var(--white);
     }
 
-    .box-model{
+    .box-model {
         display: none;
     }
 
-    .card{
+    .card {
         padding: 3rem 2rem;
     }
+
     /* Estilo la primera seccion card__master */
 
-    .card__master{
+    .card__master {
         text-align: center;
         display: grid;
-        gap: .7rem;
+        gap: 0.7rem;
         padding: 5rem auto 2.5rem auto;
-
     }
 
-    .master__title{
+    .master__title {
         font-size: 1.75em;
         width: 450px;
     }
 
     /* Estilo master__info div dentro de section */
 
-    .master__info{
+    .master__info {
         margin-top: 1.2rem;
     }
 
-    .btn{
-        padding: .9rem 0;
+    .btn {
+        padding: 0.9rem 0;
     }
 
-    .btn-back{
+    .btn-back {
         width: 35%;
     }
 
-    .master__favorite{
+    .master__favorite {
         width: 170px;
         gap: 1rem;
         background-color: var(--whitealp);
         border-radius: 2rem;
         color: var(--Darkcyan);
         cursor: pointer;
-        transition: .5s;
+        transition: 0.5s;
     }
 
-
-    .text-favorite{
+    .text-favorite {
         display: block;
         font-weight: 700;
         color: var(--Darkgray);
     }
-    
-    
-    
+
     /* Estilo la segunda seccion stadistics */
 
-    .card__stadistics{
+    .card__stadistics {
         text-align: left;
         padding: 2rem auto;
     }
-    .stadistics__flex{
+
+    .stadistics__flex {
         display: grid;
         grid-template-columns: 1fr 90px 1fr 90px 1fr;
         align-items: center;
         justify-content: space-between;
     }
 
-    .lineal{
+    .lineal {
         width: 60px;
         transform: rotate(90deg);
     }
 
-    .progress__bar{
+    .progress__bar {
         width: 100%;
     }
 
-    .progress{
+    .progress {
         width: 83%;
     }
-    
+
     /* Estilo la tercera seccion about */
 
-    .about__content{
+    .about__content {
         padding: 0;
     }
 
-    .article__info{
+    .article__info {
         line-height: 2.8;
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
 
-    .info__subtitle{
+    .info__subtitle {
         font-size: 1.15em;
     }
 
-    .info__description{
+    .info__description {
         color: var(--Moderatecyan);
         font-weight: 500;
     }
 
-    .article__price{
+    .article__price {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -512,19 +588,55 @@ h1,h2,h3,h4{
         gap: 1.5em;
     }
 
-    .price__info{
+    .price__info {
         display: flex;
         align-items: center;
-        gap: .5rem;
-
+        gap: 0.5rem;
     }
 
-    .modal-btn{
+    .modal-btn {
         width: unset;
         padding: 1rem 1.5rem;
-        font-size: .95em;
+        font-size: 0.95em;
     }
-    .modal-off{
+
+    .modal-off {
         padding: 1rem 1.8rem;
+    }
+
+    /* Estilo modal */
+
+    .grid{
+        grid-template-columns: 15px 100px 1fr 1fr;
+
+    }
+
+    .info__title{
+        font-size: 1em;
+    }
+
+    .info__content{
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .info__text{
+        grid-column: 1 / 5;
+    }
+    .modal__description{
+        grid-column: 2 / 6; 
+        grid-row: 2;
+    }
+    .info__description{
+        font-weight: 700;
+    }
+    .price__info{
+        grid-column: 5 / 5;
+    }
+
+    .modal__container{
+        max-width: 680px;
+
     }
 }
