--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,12 @@ h4 {
 .nav__link {
     color: var(--Black);
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 700;
+    transition: color .5s;
+}
+
+.nav__link:hover{
+    color: var(--Moderatecyan);
 }
 
 .filters {
@@ -368,7 +373,7 @@ h4 {
 }
 
 .info__title:hover{
-    color: var(--Moderatecyan);
+    color: var(--Moderatecyan) !important;
 }
 
 .info__text {
@@ -445,6 +450,103 @@ h4 {
     border: 1px solid var(--red);
 }
 
+.modal__show{
+    border-top: 1px solid var(--verydark);
+    padding: 1.5rem 0 0rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+    position: absolute;
+    transform: scale(0);
+    transition: transform .5s;
+}
+
+.modal__show--active{
+    position: static;
+    transform: scale(1);
+    transition: transform .4s;
+}
+
+
+
+.show__inputs{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.show__money{
+    width: 40%;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: 1px solid var(--verydark);
+    padding-inline-start: 2rem;
+    position: relative;
+    font-weight: 700;
+}
+
+.show__money:focus-within{
+    outline: 1px solid var(--Darkcyan);
+}
+
+.show__money::before{
+    content: 'Hola';
+    width: 10px;
+    height: 10px;
+    color: black;
+}
+
+.continue{
+    width: 60%;
+    background-color: var(--Moderatecyan);
+    color: var(--white);
+    padding: 1rem;
+    border-radius: 2rem;
+    border: none;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .5s ease;
+}
+
+.continue:hover{
+    background-color: var(--Black);
+    color: var(--white);
+}
+
+
+/* Estilo card back */
+
+.card__back{
+    text-align: center;
+    display: grid;
+    gap: 1rem;
+    padding: 2rem .5rem;
+    background-color: var(--white);
+    z-index: 1000 !important;
+    position: absolute;
+    border-radius: .5rem;
+    max-width: 470px; 
+    left: 0;
+    right: 0;
+    margin: auto;
+
+}
+
+.card__title{
+    color: var(--Black);
+    font-weight: 700;
+    font-size: 1.3em;
+}
+
+.got{
+    width: 100px;
+    margin: auto;
+}
+.hidden{
+    display: none;
+    transition: 10s;   
+}
 /* Agrego mediaQuerys */
 
 @media (min-width: 768px) {
@@ -608,7 +710,7 @@ h4 {
 
     .grid{
         grid-template-columns: 15px 100px 1fr 1fr;
-
+        grid-template-rows: auto auto 0fr;
     }
 
     .info__title{
@@ -627,6 +729,7 @@ h4 {
     .modal__description{
         grid-column: 2 / 6; 
         grid-row: 2;
+        font-size: .96em;
     }
     .info__description{
         font-weight: 700;
@@ -636,7 +739,26 @@ h4 {
     }
 
     .modal__container{
-        max-width: 680px;
+        max-width: 660px;
 
+    }
+
+    .modal__show{
+        grid-column: 2 / 6;
+        grid-row: 3;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    .show__money{
+        width: 30%;
+    }
+    .show__inputs{
+        width: 40%;
+    }
+
+    .card__back{
+        padding: 2rem;
     }
 }
