--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 
 :root {
     --Moderatecyan: hsl(176, 50%, 47%);
+    --ModeratecyanAlpha: hsla(153, 77%, 10%, 0.158);
     --Darkcyan: hsl(176, 72%, 28%);
     --Black: hsl(0, 0%, 0%);
     --Darkgray: hsl(0, 0%, 48%);
@@ -11,6 +12,7 @@
     --darkGrayLight: hsla(0, 0%, 72%, 0.26);
     --verydarkbg: hsla(207, 18%, 12%, 0.37);
     --red: hsl(4, 78%, 55%);
+    --darkcyanAlpha: hsla(189, 100%, 96%, 0.945);
 }
 
 * {
@@ -24,6 +26,10 @@ body {
     line-height: 1.7;
     font-size: 0.952em;
     color: var(--Darkgray);
+}
+
+.scroll{
+    overflow: hidden;
 }
 
 h1,
@@ -73,7 +79,7 @@ h4 {
     width: 100%;
     border-radius: 0.8rem;
     clip-path: circle(0.4% at 100% 0);
-    transition: clip-path 0.4s;
+    transition: clip-path 0.2s ;
     z-index: 999;
 }
 
@@ -96,11 +102,13 @@ h4 {
     color: var(--Black);
     text-decoration: none;
     font-weight: 700;
-    transition: color .5s;
+    transition: .3s ease-in-out;
+    border-bottom: 2px solid transparent;
+    padding-bottom: .2rem;
 }
 
 .nav__link:hover{
-    color: var(--Moderatecyan);
+    border-bottom: 2px solid var(--white);
 }
 
 .filters {
@@ -189,19 +197,25 @@ h4 {
     width: 75%;
 }
 
-.master__favorite {
+.bookmark{
+    background: url(../images/icon-bookmark.svg) no-repeat;
+    border-radius: 999px;
+    transition: .5s;
+}
+
+.bookmark--active{
+    background: url(../images/icon-bookmark-cyan.svg) no-repeat;
+    border-radius: 999px;
+}
+
+.btn-bookmark{
     display: flex;
     align-items: center;
-}
-
-.master__favorite svg {
-    border: 2px solid transparent;
-}
-
-.master__favorite svg:hover {
-    transition: border 0.5s;
-    border: 2px solid var(--Darkcyan);
+    gap: .5rem;
+    border: none;
     border-radius: 50%;
+    cursor: pointer;
+    background-color: transparent;
 }
 
 .text-favorite {
@@ -341,7 +355,7 @@ h4 {
     transition: opacity 0.5s 0.3s;
     pointer-events: unset;
     --transform: translateY(0vh);
-    --transition: transform 0.5s;
+    --transition: transform .5s ;
 }
 
 .modal__grid {
@@ -356,6 +370,7 @@ h4 {
     display: grid;
     gap: 2.5rem;
     transition: .3s ease;
+    pointer-events: none;
 }
 
 .modal__info--active{
@@ -368,13 +383,8 @@ h4 {
 
 .info__title {
     font-size: 1.1em;
-    transition: color .5s;
-    cursor: pointer;
 }
 
-.info__title:hover{
-    color: var(--Moderatecyan) !important;
-}
 
 .info__text {
     display: flex;
@@ -385,6 +395,9 @@ h4 {
 .radio {
     display: none;
 }
+.radio-of+label{
+    pointer-events: none !important;
+}
 
 .radio+label {
     display: inline-block;
@@ -393,7 +406,8 @@ h4 {
     position: relative;
     cursor: pointer;
     transition: .5s ease;
-
+    pointer-events: all;
+    
 }
 
 .radio+label::before {
@@ -422,6 +436,10 @@ h4 {
     background-color: var(--Moderatecyan);
     border-radius: 50%;
     transition: .5s ease;
+}
+
+.sinDecoracion:checked+label::after{
+    content: none;
 }
 
 .box-close {
@@ -455,17 +473,17 @@ h4 {
     padding: 1.5rem 0 0rem 0;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.2rem;
     text-align: center;
     position: absolute;
     transform: scale(0);
-    transition: transform .5s;
+    transition: transform .1s;
 }
 
 .modal__show--active{
     position: static;
     transform: scale(1);
-    transition: transform .4s;
+    transition: transform .3s;
 }
 
 
@@ -507,6 +525,7 @@ h4 {
     font-weight: 700;
     cursor: pointer;
     transition: .5s ease;
+    pointer-events: all;
 }
 
 .continue:hover{
@@ -530,7 +549,12 @@ h4 {
     left: 0;
     right: 0;
     margin: auto;
+    opacity: 0;
 
+}
+.cardBack-active{
+    opacity: 1;
+    transition: opacity .5s;
 }
 
 .card__title{
@@ -540,15 +564,12 @@ h4 {
 }
 
 .got{
-    width: 100px;
+    width: 150px;
     margin: auto;
 }
-.hidden{
-    display: none;
-    transition: 10s;   
-}
-/* Agrego mediaQuerys */
 
+
+/* Agrego mediaQuerys */
 @media (min-width: 768px) {
 
     /* Header */
@@ -619,18 +640,30 @@ h4 {
 
     .master__favorite {
         width: 170px;
-        gap: 1rem;
+        gap: 1em;
         background-color: var(--whitealp);
         border-radius: 2rem;
         color: var(--Darkcyan);
         cursor: pointer;
-        transition: 0.5s;
+        /* border: 1px solid transparent; */
+        transition: .5s ease-in-out;
+    }
+
+    .master__favorite--active{
+        background-color: var(--darkcyanAlpha);
+        transition: .5s;
+        filter: drop-shadow(1px 1px 3px var(--ModeratecyanAlpha));
     }
 
     .text-favorite {
         display: block;
         font-weight: 700;
         color: var(--Darkgray);
+        transition: .5s;
+    }
+
+    .text-favorite--active{
+        color: var(--Moderatecyan);
     }
 
     /* Estilo la segunda seccion stadistics */
@@ -749,8 +782,8 @@ h4 {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        
     }
+
     .show__money{
         width: 30%;
     }
